--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fatoração PrimePro</title>
+    <title>Fatoração Pro</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -174,7 +174,7 @@
 <body>
 
     <main class="main-container">
-        <h1>Fatoração PrimePro</h1>
+        <h1>Fatoração Pro</h1>
         
         <div class="input-group">
             <label for="numeroInput">Digite um número inteiro positivo:</label>
@@ -199,7 +199,7 @@
     </main>
 
     <footer>
-        <p>© 2023 PrimePro Calculator. Todos os direitos reservados.</p>
+        <p>© 2026 Fatoração Pro. Todos os direitos reservados.</p>
     </footer>
 
     <script>
